[project]
name = "muke-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.2",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "notebook>=7.5.6",
]
